@@ -1,3 +1,6 @@
+  26 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-host-deploy-9999.ebuild:
+  Add local version support
+
   18 Apr 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-host-deploy-1.0.1.ebuild,
   ovirt-host-deploy-9999.ebuild:
   move gettext to DEPEND
